cs352/proj3/tests/type_rules/type_err/7.js
<script type="text/JavaScript">
var x = []
x.field = 5
</script>
